log/build_2024-05-29_15-08-51/my_taller1/stderr.log
  File "/home/juan/ros2_ws/install/my_taller1/lib/python3.10/site-packages/my_taller1/Servicio.py", line 99
    print (len(10)))
                   ^
SyntaxError: unmatched ')'

